--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,11 @@
 .gradle
 
 # Ignore Gradle build output directory
-build
-build/build
-*/build/
-/*/build
-out/
-*/out/
-
+.gradle
+/build/
 gradlew*
-*.gradlew
+!gradle-wrapper.jar
+
 *.jar
 *.bat
 *.txt
