--- a/gradle/build.versions.toml
+++ b/gradle/build.versions.toml
@@ -21,6 +21,8 @@ jackson-core = { group = "com.fasterxml.jackson.core", name = "jackson-core", ve
 jackson-databind = { group = "com.fasterxml.jackson.core", name = "jackson-databind", version.ref = "jackson" }
 jakarta-json-processing = { group = "jakarta.json", name = "jakarta.json-api", version.ref = "jakartaJsonP" }
 jakarta-json-bind = { group = "jakarta.json.bind", name = "jakarta.json.bind-api", version.ref = "jakartaJsonB" }
+eclipse-parsson = "org.eclipse.parsson:parsson:1.0.0"
+eclipse-yasson = "org.eclipse:yasson:2.0.4"
 
 spotbugs = "com.github.spotbugs:spotbugs-annotations:4.0.1"
 sonar-source = "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.5.0.2730"
