--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,7 @@ server:
   port: 8080
 elastic:
   index: todo-index
+  tsPipeline: timestamp-pipeline
 es:
   hostname: my-deployment-alias-restaurants-001.es.us-west-1.aws.found.io
   scheme: https
